2002-04-28  Martin Weber <martweb@gmx.net>

	* input-magick.c: Now also tested with ImageMagick till 5.4.5.
	Wrote about it in the comment area.

	Message-ID: <3CC5CB34.FF990F83@gmx.net>.

2002-04-21  Masatake YAMATO  <yamato@redhat.com>

	* input-magick.c (magick_load_image): Don't use
	MagickError. Instead use msg_func.
	
	* autotrace.h (struct _at_fitting_opts_type): Rename
	`filter_iteration_count' to `filter_iterations' in
	order to make the field and its associated option name 
	same.

2002-04-16  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.dsp: s/VERSION/AUTOTRACE_VERSION/g.

	* autotrace.vcproj: ditto. Suggested by Martin.

	* autotrace.c (at_version): Use AUTOTRACE_VERSION
	instead of VERSION.
	(at_home_site): Use AUTOTRACE_WEB.

	* autotrace.m4 (AM_PATH_AUTOTRACE): Check version number.

	* configure.in (AUTOTRACE_VERSION, AUTOTRACE_MAJOR_VERSION,
	AUTOTRACE_MINOR_VERSION, AUTOTRACE_MICRO_VERSION,
	AUTOTRACE_WEB): 
	New constants.
	
2002-04-15  Martin Weber <martweb@gmx.net>

	* fit.c (find_half_tangent): 
	(find_tangent): Fixed a bug in tangent 
	calculation.
	
2002-04-15  Masatake YAMATO  <yamato@redhat.com>

	* COPYING.LIB: New file.

	* despeckle.*: Change the license to LGPL.
	
	* input*.*: Likewise.

	* median.c: Likewise.

	* output-*.*: Likewise.

	* quantize.h: Likewise.

	* thin-image.*: Likewise.

2002-04-03  Martin Weber <martweb@gmx.net>

	* exception.[ch] (at_exception_fatal, at_exception_warning): 
	added "const" to the passig parameter.

	* input-png.c (handle_warning, handle_error): Likewise.
	(init_structs): Cast handle_error and handle_warning that
	are passed to png_create_read_struct.
	(load_image): make width, height and row unsigned short.
	Casted values returned from png_get_image_width.

	Message-ID: <3CAEC662.41EEE71A@gmx.net>.

2002-04-03  Masatake YAMATO  <yamato@redhat.com>

	* HACKING (Tag naming scheme): Updated.

	* autotrace.spec.in: Updated.

	* configure.in: Version 0.30.
